# Alignment-FMIndex

./: .gitignore  CMakeLists.txt  ED.hpp  README  bandmatrix.h  bidirectional.hpp  customtypedefs.h  index_bidirectional_waveletindex.hpp  indexes.hpp  main.cpp  runTests.cpp  wavelet_tree.hpp
ReadingInput/: ConfCheckFMI.hpp
